fixed spacing between header and main

--- a/css/blogpage.css
+++ b/css/blogpage.css
@@ -3,7 +3,9 @@
 
 
 html {
+    margin: 0;
     height: 100%;
+    min-height: 100%;
 }
 
 *, *::before, *::after{
@@ -16,8 +18,13 @@ body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 400;
 
+    height: 100%;
     min-height: 100%;
 
     display: flex;
     flex-direction: column;
+}
+
+main{
+    margin-top: 5rem;
 }
